# Formula_Cones_Navigation

GNN_plus_speed/include/: cone.hpp  speed_profiler.hpp  waypoint.hpp
GNN_plus_speed/src/: track_gen.cpp
GNN_plus_speed/train/: utils.py
GNN_steering/: CMakeLists.txt  Dockerfile  speed_dynamics.py  train.py  utils.py
GNN_steering/include/: track_generator.hpp
gnn_map_colorizer/: README.md
gnn_map_colorizer-main/: CMakeLists.txt  Dockerfile  docker-compose.yml  package.xml
gnn_map_colorizer-main/include/: ros_interface.hpp
gnn_map_colorizer-main/src/: main.cpp
gnn_map_colorizer-main/train/: CMakeLists.txt  Dockerfile  train.py
gnn_map_colorizer-main/train/include/: track_generator.hpp
gnn_map_colorizer-main/train/src/: track_gen.cpp
gnn_map_colorizer/config/: config.yaml
gnn_map_colorizer/include/: gnn_colorizer.hpp  speed_profiler.hpp
gnn_map_colorizer/launch/: run.launch
gnn_map_colorizer/train/: README.md  utils.py
gnn_map_colorizer/train/include/: common.hpp
gnn_map_colorizer/weights/: gnn_pi4_2.pt
steering/: gnn.pth  models.py
steering/include/: common.hpp
